--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bs58": "^6.0.0",
+    "buffer": "npm:Buffer@^0.0.0",
+    "Buffer": "^0.0.0",
+    "ethereumjs-util": "^7.1.5",
+    "ethers": "^6.13.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "secp256k1": "^5.0.1",
+    "tweetnacl": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
