--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^6.13.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "secp256k1": "^5.0.1",
     "tweetnacl": "^1.0.3",
